@@ -3,51 +3,65 @@
 
 # Test driver for the Make test suite
 
-# Usage:  run_make_tests  [testname]
-#                         [-debug]
-#                         [-help]
-#                         [-verbose]
-#                         [-keep]
-#                         [-make <make prog>]
-#                        (and others)
+sub print_standard_help
+{
+  my(@morehelp) = @_;
+  my($t) = "      ";
 
-$valgrind = 0;              # invoke make with valgrind
+  print "Test Driver for $testee\n";
+  print "=" x length($line);
+
+  print_usage();
+
+  print "
+testname:
+      You may, if you wish, run only ONE test if you know the name
+      of that test and specify this name anywhere on the command
+      line.  Otherwise ALL existing tests in the scripts directory
+      will be run.
+
+--verbose
+      If this option is given, a description of every test is
+      displayed before the test is run. (Not all tests may have
+      descriptions at this time).
+
+--detail
+      If this option is given, a detailed description of every
+      test is displayed before the test is run. (Not all tests
+      have descriptions at this time)
+
+--profile
+      If this option is given, then the profile file
+      is added to other profiles every time $testee is run.
+      This option only works on VOS at this time.
+
+--keep
+      You may give this option if you DO NOT want ANY
+      of the files generated by the tests to be deleted. 
+      Without this option, all files generated by the test will
+      be deleted IF THE TEST PASSES.
+
+--debug  
+      Use this option if you would like to see all of the system
+      calls issued and their return status while running the tests
+      This can be helpful if you're having a problem adding a test
+      to the suite, or if the test fails!
+";
+
+  foreach my $line (@morehelp)
+  {
+    $tline = $line;
+    if (substr ($tline, 0, 1) eq "\t")
+    {
+      substr ($tline, 0, 1) = $t;
+    }
+    print "$tline\n";
+  }
+}
 
 require "test_driver.pl";
 
 #$SIG{INT} = sub { print STDERR "Caught a signal!\n"; die @_; };
-
-sub valid_option
-{
-   local($option) = @_;
-
-   if ($option =~ /^-make([-_]?path)?$/)
-   {
-      $make_path = shift @argv;
-      if (!-f $make_path)
-      {
-	 print "$option $make_path: Not found.\n";
-	 exit 0;
-      }
-      return 1;
-   }
-
-   if ($option =~ /^-valgrind$/i) {
-     $valgrind = 1;
-     return 1;
-   }
-
-# This doesn't work--it _should_!  Someone needs to fix this badly.
-#
-#   elsif ($option =~ /^-work([-_]?dir)?$/)
-#   {
-#      $workdir = shift @argv;
-#      return 1;
-#   }
-
-   return 0;
-}
-
 
 # This is an "all-in-one" function.  Arguments are as follows:
 #
@@ -55,8 +69,6 @@ sub valid_option
 #  [1] (string):  Arguments to pass to make.
 #  [2] (string):  Answer we should get back.
 #  [3] (integer): Exit code we expect.  A missing code means 0 (success)
-
-$old_makefile = undef;
 
 sub run_make_test
 {
@@ -169,25 +181,20 @@ sub run_make_with_options {
 
 sub print_usage
 {
-   &print_standard_usage ("run_make_tests", "[-make_path make_pathname]");
+   &print_standard_usage ("run_make_tests", "[--make *make-program*]");
+   exit 0;
 }
 
 sub print_help
 {
-   &print_standard_help ("-make_path",
+   &print_standard_help ("--make *make-program*",
           "\tYou may specify the pathname of the copy of make to run.");
+   exit 0;
 }
 
 sub get_this_pwd {
-  if ($vos) {
-    $delete_command = "delete_file";
-    $__pwd = `++(current_dir)`;
-  }
-  else {
-    $delete_command = "rm";
-    chop ($__pwd = `pwd`);
-  }
-
+  $delete_command = "rm";
+  chomp ($__pwd = `pwd`);
   return $__pwd;
 }
 
@@ -332,5 +339,8 @@ sub setup_for_test
     print("Purify testfiles are: $pure_testname*\n") if $debug;
   }
 }
+
+$valgrind = 0;              # invoke make with valgrind
+$old_makefile = undef;
 
 exit !&toplevel;
